@@ -1,12 +1,30 @@
 {
-  "timestamp" : "2023-11-01T01:22:06Z",
-  "count_outdated" : 62,
-  "uniques_outdated" : 46,
-  "count" : 63,
-  "uniques" : 47,
+  "timestamp" : "2024-01-07T08:00:54Z",
+  "count_outdated" : 63,
+  "uniques_outdated" : 47,
+  "count" : 67,
+  "uniques" : 50,
   "clones" : [
     {
-      "timestamp": "2023-10-20T00:00:00Z",
+      "timestamp": "2023-12-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-30T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
