@@ -1,9 +1,19 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-10-20T00:00:00Z",
+      "timestamp": "2023-12-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-30T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
